--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -24,60 +24,125 @@
         android:layout_height="match_parent"
         >
 
-        <LinearLayout android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:orientation="vertical"
+        <LinearLayout
+            android:layout_width="255dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            >
-        <TextView android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:id="@+id/iptext"
-            android:layout_gravity="center_horizontal"
-            android:textStyle="bold"
-            android:layout_marginTop="5dp"
-            android:text=""
-            android:textSize="22sp"
-            />
+            android:orientation="vertical">
 
-            <be.appfoundry.progressbutton.ProgressButton
+            <TextView
+                android:id="@+id/iptext"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="5dp"
+                android:text=""
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+            <be.appfoundry.progressbutton.ProgressButton xmlns:progressbutton="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/progressButton"
-                xmlns:progressbutton="http://schemas.android.com/apk/res-auto"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                android:layout_marginTop="80dp"
                 android:layout_gravity="center"
+                android:layout_marginTop="80dp"
                 progressbutton:fillColor="@color/colorPrimary"
+                progressbutton:indeterminate="true"
                 progressbutton:progressColor="#00cc00"
-                progressbutton:strokeWidth="10dp"
-                progressbutton:strokeColor="#cccccc"
                 progressbutton:progressIcon="@drawable/bnnn"
-                progressbutton:indeterminate="true"/>
+                progressbutton:strokeColor="#cccccc"
+                progressbutton:strokeWidth="10dp" />
 
-            <TextView android:layout_height="wrap_content"
+            <TextView
+                android:id="@+id/textview"
                 android:layout_width="wrap_content"
 
-                android:id="@+id/textview"
-                android:textStyle="bold"
-                android:text=""
-                android:layout_marginTop="50dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginTop="50dp"
+                android:text=""
                 android:textSize="25sp"
-                />
+                android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/btnlogin"
-                android:layout_width="match_parent"
-                android:layout_marginTop="20dp"
-                android:textColor="@color/colorPrimary"
+            <!-- Login progress -->
+            <ProgressBar
+                android:id="@+id/login_progress"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Login" />
-            <Button
-                android:id="@+id/btnsignup"
+                android:layout_marginBottom="8dp"
+                android:visibility="gone" />
+
+            <ScrollView
+                android:id="@+id/login_form"
                 android:layout_width="match_parent"
-                android:layout_marginTop="20dp"
-                android:textColor="@color/colorPrimary"
-                android:layout_height="wrap_content"
-                android:text="Signup" />
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:id="@+id/email_login_form"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <AutoCompleteTextView
+                            android:id="@+id/username"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/prompt_email"
+                            android:inputType="textEmailAddress"
+                            android:maxLines="1"
+                            android:singleLine="true" />
+
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <EditText
+                            android:id="@+id/password"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/prompt_password"
+                            android:imeActionId="6"
+                            android:imeActionLabel="@string/action_sign_in_short"
+                            android:imeOptions="actionUnspecified"
+                            android:inputType="textPassword"
+                            android:maxLines="1"
+                            android:singleLine="true" />
+
+                    </android.support.design.widget.TextInputLayout>
+
+                    <Button
+                        android:id="@+id/btnLogin"
+                        style="?android:textAppearanceSmall"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/action_sign_in"
+                        android:textColor="@color/colorPrimary" />
+
+                    <Button
+                        android:id="@+id/btnSignup"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="Signup"
+                        android:textColor="@color/colorPrimary" />
+                    <Button
+                        android:id="@+id/btnLogout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="Logout"
+                        android:textColor="@color/colorPrimary" />
+
+                </LinearLayout>
+            </ScrollView>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
